--- a/src/main/resources/config-data/stage_config.json
+++ b/src/main/resources/config-data/stage_config.json
@@ -3,18 +3,21 @@
     "id": 101,
     "stageName": "第一章 第一关",
     "stageType": 1,
-    "difficulty": 1
+    "difficulty": 1,
+    "chapter": 1
   },
   {
     "id": 102,
     "stageName": "第一章 第二关",
     "stageType": 1,
-    "difficulty": 1
+    "difficulty": 1,
+    "chapter": 1
   },
   {
     "id": 201,
     "stageName": "第二章 第一关",
     "stageType": 1,
-    "difficulty": 1
+    "difficulty": 1,
+    "chapter": 2
   }
 ] 
